<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    tools:context=".ui.view.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_detail_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/actionBarSize"
                android:paddingTop="16dp">

                <LinearLayout
                    android:id="@+id/ll_profile_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="24dp"
                    android:paddingVertical="12dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civ_detail_avatar_profile"
                        android:layout_width="77dp"
                        android:layout_height="77dp"
                        tools:src="@tools:sample/avatars" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="24dp"
                        android:layout_gravity="center"
                        >
                        <TextView
                            android:id="@+id/tv_profile_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/profile_username"
                            tools:text="@string/user_name" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_profile_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/ll_profile_username"
                    >
                    <TextView
                        android:id="@+id/tv_profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/profile_bio"
                        android:textStyle="bold"
                        android:visibility="gone"
                        tools:text="@string/user_name" />

                    <TextView
                        android:id="@+id/tv_profile_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/profile_bio"
                        android:textColor="@color/suva_grey"
                        android:visibility="gone"
                        tools:text="@string/user_name" />

                    <TextView
                        android:id="@+id/tv_profile_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/profile_bio"
                        android:visibility="gone"
                        tools:text="@string/user_name" />

                    <TextView
                        android:id="@+id/tv_profile_blog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/profile_bio"
                        android:textColor="@color/prussian_blue"
                        android:textStyle="bold"
                        android:visibility="gone"
                        tools:text="@string/user_name" />
                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@color/iron_200"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_profile_bio"
                    />

                <LinearLayout
                    android:id="@+id/ll_profile_stats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="16dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider_1"
                    >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_repo"
                            style="@style/profile_stats"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/repo"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_followers"
                            style="@style/profile_stats"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/followers"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_following"
                            style="@style/profile_stats"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/following"
                            android:textAlignment="center" />

                    </LinearLayout>
                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/iron_200"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_profile_stats"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/white"
                android:background="?attr/colorPrimary"
                android:visibility="visible"
                app:layout_collapseMode="pin"
                 />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimaryVariant"
            android:overScrollMode="never"
            app:tabGravity="fill"
            app:tabSelectedTextColor="?attr/colorOnSecondary"
            app:tabTextColor="@color/iron_500"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@android:color/black"
        android:layout_gravity="center"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        app:tint="?attr/colorSecondaryVariant"
        android:backgroundTint="?attr/colorOnSecondary"
        android:layout_margin="24dp"
        android:contentDescription="@string/menu_favorite"
        android:src="@drawable/ic_favorite_border_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>